...
        label.translatesAutoresizingMaskIntoConstraints = false
        label.textColor = .white
        label.font = UIFont.systemFont(ofSize: 13)
        return label
    }()
    
    private let logoutButton: UIButton = {
        let logoutButton = UIButton()
        logoutButton.accessibilityIdentifier = "logoutButton"
        logoutButton.setImage(Images.logout_Button, for: .normal)
        logoutButton.addTarget(self, action: #selector(didTappedExitButton), for: .touchUpInside)
        logoutButton.translatesAutoresizingMaskIntoConstraints = false
        return logoutButton
...
